--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "mebots-example-javascript",
   "version": "1.0.0",
-  "description": "A simple GroupMe bot written in Node.js, using the Mebots API",
+  "description": "A simple GroupMe bot written in Node.js",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev":"nodemon index.js"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "express": "^4.16.4",
-    "axios": "^0.19.0",
-    "mebots": "^1.2.0"
+    "mebots": "^1.2.0",
+    "nodemon": "^3.0.3"
   },
   "keywords": [
     "node",
@@ -23,7 +25,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ErikBoesen/mebots-example-javascript"
+    "url": "https://github.com/Statwarts/GroupMe-bot"
   },
   "license": "MIT"
 }
