--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "@fastify/busboy": "^2.1.0",
     "axios": "^1.6.5",
     "express": "^4.16.4",
     "firebase": "^10.7.2",
