--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A simple GroupMe bot written in Node.js",
   "main": "index.js",
   "scripts": {
-    "start": "node index.cjs",
-    "dev": "nodemon index.cjs"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
     "@fastify/busboy": "^2.1.0",
@@ -16,7 +16,6 @@
     "nodemon": "^3.0.3",
     "undici": "^6.4.0"
   },
-  "type": "module",
   "keywords": [
     "node",
     "mebots",
