--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@fastify/busboy": "^2.1.0",
+    "@firebase/storage": "^0.12.0",
     "axios": "^1.6.5",
     "express": "^4.16.4",
     "firebase": "^10.7.2",
