--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     "nodemon": "^3.0.3",
     "undici": "^6.4.0"
   },
+  "overrides": {
+    "@nestjs/platform-express": {
+      "multer": "1.4.4-lts.1"
+    }
+  },
   "keywords": [
     "node",
     "mebots",
