--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fastify/busboy": "^2.1.0",
     "@firebase/storage": "^0.12.0",
     "axios": "^1.6.5",
+    "dicer": "^0.3.1",
     "express": "^4.16.4",
     "firebase": "^10.7.2",
     "mebots": "^1.2.0",
