--- a/package.json
+++ b/package.json
@@ -8,15 +8,11 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
-    "@fastify/busboy": "^2.1.0",
-    "@firebase/storage": "^0.12.0",
     "axios": "^1.6.5",
-    "dicer": "^0.3.1",
     "express": "^4.16.4",
     "firebase": "^10.7.2",
     "mebots": "^1.2.0",
-    "nodemon": "^3.0.3",
-    "undici": "^6.4.0"
+    "nodemon": "^3.0.3"
   },
   "overrides": {
     "@nestjs/platform-express": {
