--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "axios": "^1.6.5",
+    "date-fns": "^3.3.1",
     "express": "^4.16.4",
     "firebase": "^10.7.2",
     "mebots": "^1.2.0",
+    "node-schedule": "^2.1.1",
     "nodemon": "^3.0.3"
   },
   "overrides": {
