--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.6.5",
     "date-fns": "^3.3.1",
+    "date-fns-tz": "^2.0.0",
     "express": "^4.16.4",
     "firebase": "^10.7.2",
     "mebots": "^1.2.0",
