--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "dependencies": {
     "axios": "^1.6.5",
     "date-fns": "^3.3.1",
-    "date-fns-tz": "^2.0.0",
     "express": "^4.16.4",
     "firebase": "^10.7.2",
+    "luxon": "^3.4.4",
     "mebots": "^1.2.0",
     "node-schedule": "^2.1.1",
     "nodemon": "^3.0.3"
@@ -36,5 +36,6 @@
     "type": "git",
     "url": "https://github.com/Statwarts/GroupMe-bot"
   },
+  
   "license": "MIT"
 }
