--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.6.5",
+    "dotenv": "^16.4.1",
     "express": "^4.16.4",
     "firebase": "^10.7.2",
     "luxon": "^3.4.4",
