--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "axios": "^1.6.5",
+    "bing-chat": "^0.2.3",
     "dotenv": "^16.4.1",
     "express": "^4.16.4",
+    "fetch": "^1.1.0",
     "firebase": "^10.7.2",
     "luxon": "^3.4.4",
     "moment-timezone": "^0.5.44",
